--- a/ca2.ipynb
+++ b/ca2.ipynb
@@ -37,6 +37,18 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "Use log transform to deal with data spread of data\n",
+    "https://www.google.com/search?q=how+to+deal+with+data+skewness&oq=how+to+deal+with+data+skewness&aqs=chrome..69i57.4029j0j7&sourceid=chrome&ie=UTF-8\n",
+    "\n",
+    "- log transformation"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "id": "8833ad10",
    "metadata": {},
    "source": [
@@ -53,11 +65,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "deb3b224",
-   "metadata": {},
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   instant      dteday  season  yr  mnth  hr  holiday  weekday  workingday  \\\n0        1  2011-01-01       1   0     1   0        0        6           0   \n1        2  2011-01-01       1   0     1   1        0        6           0   \n2        3  2011-01-01       1   0     1   2        0        6           0   \n3        4  2011-01-01       1   0     1   3        0        6           0   \n4        5  2011-01-01       1   0     1   4        0        6           0   \n\n   weathersit  temp   atemp   hum  windspeed  casual  registered  cnt  \n0           1  0.24  0.2879  0.81        0.0       3          13   16  \n1           1  0.22  0.2727  0.80        0.0       8          32   40  \n2           1  0.22  0.2727  0.80        0.0       5          27   32  \n3           1  0.24  0.2879  0.75        0.0       3          10   13  \n4           1  0.24  0.2879  0.75        0.0       0           1    1  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>instant</th>\n      <th>dteday</th>\n      <th>season</th>\n      <th>yr</th>\n      <th>mnth</th>\n      <th>hr</th>\n      <th>holiday</th>\n      <th>weekday</th>\n      <th>workingday</th>\n      <th>weathersit</th>\n      <th>temp</th>\n      <th>atemp</th>\n      <th>hum</th>\n      <th>windspeed</th>\n      <th>casual</th>\n      <th>registered</th>\n      <th>cnt</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>2011-01-01</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>6</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0.24</td>\n      <td>0.2879</td>\n      <td>0.81</td>\n      <td>0.0</td>\n      <td>3</td>\n      <td>13</td>\n      <td>16</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>2011-01-01</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>6</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0.22</td>\n      <td>0.2727</td>\n      <td>0.80</td>\n      <td>0.0</td>\n      <td>8</td>\n      <td>32</td>\n      <td>40</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>2011-01-01</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>0</td>\n      <td>6</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0.22</td>\n      <td>0.2727</td>\n      <td>0.80</td>\n      <td>0.0</td>\n      <td>5</td>\n      <td>27</td>\n      <td>32</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>2011-01-01</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>3</td>\n      <td>0</td>\n      <td>6</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0.24</td>\n      <td>0.2879</td>\n      <td>0.75</td>\n      <td>0.0</td>\n      <td>3</td>\n      <td>10</td>\n      <td>13</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>2011-01-01</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>4</td>\n      <td>0</td>\n      <td>6</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0.24</td>\n      <td>0.2879</td>\n      <td>0.75</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "%matplotlib inline\n",
+    "\n",
+    "hourly = pd.read_csv('./data/hour.csv')\n",
+    "hourly.head(5)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Splitting features and targets\n",
+    "targets = hourly[['cnt', 'registered', 'casual']]\n",
+    "\n",
+    "features = hourly.drop(targets, axis=1)\n",
+    "\n",
+    "xtrain, xtest, ytrain, ytest = train_test_split(features, targets ,test_size=0.2)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       instant      dteday  season  yr  mnth  hr  holiday  weekday  \\\n10428    10429  2012-03-15       1   1     3  15        0        4   \n10463    10464  2012-03-17       1   1     3   2        0        6   \n12179    12180  2012-05-27       2   1     5  16        0        0   \n\n       workingday  weathersit  temp   atemp   hum  windspeed  \n10428           1           1  0.72  0.6515  0.32     0.2239  \n10463           0           2  0.44  0.4394  0.88     0.0000  \n12179           0           1  0.78  0.7121  0.52     0.2836  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>instant</th>\n      <th>dteday</th>\n      <th>season</th>\n      <th>yr</th>\n      <th>mnth</th>\n      <th>hr</th>\n      <th>holiday</th>\n      <th>weekday</th>\n      <th>workingday</th>\n      <th>weathersit</th>\n      <th>temp</th>\n      <th>atemp</th>\n      <th>hum</th>\n      <th>windspeed</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>10428</th>\n      <td>10429</td>\n      <td>2012-03-15</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>15</td>\n      <td>0</td>\n      <td>4</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0.72</td>\n      <td>0.6515</td>\n      <td>0.32</td>\n      <td>0.2239</td>\n    </tr>\n    <tr>\n      <th>10463</th>\n      <td>10464</td>\n      <td>2012-03-17</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>2</td>\n      <td>0</td>\n      <td>6</td>\n      <td>0</td>\n      <td>2</td>\n      <td>0.44</td>\n      <td>0.4394</td>\n      <td>0.88</td>\n      <td>0.0000</td>\n    </tr>\n    <tr>\n      <th>12179</th>\n      <td>12180</td>\n      <td>2012-05-27</td>\n      <td>2</td>\n      <td>1</td>\n      <td>5</td>\n      <td>16</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0.78</td>\n      <td>0.7121</td>\n      <td>0.52</td>\n      <td>0.2836</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xtrain.head(3)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       instant      dteday  season  yr  mnth  hr  holiday  weekday  \\\n14312    14313  2012-08-24       3   1     8  13        0        5   \n15739    15740  2012-10-23       4   1    10   0        0        2   \n12461    12462  2012-06-08       2   1     6  10        0        5   \n\n       workingday  weathersit  temp   atemp   hum  windspeed  \n14312           1           2  0.80  0.7121  0.41     0.1045  \n15739           1           1  0.46  0.4545  0.88     0.1642  \n12461           1           1  0.66  0.6212  0.47     0.2537  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>instant</th>\n      <th>dteday</th>\n      <th>season</th>\n      <th>yr</th>\n      <th>mnth</th>\n      <th>hr</th>\n      <th>holiday</th>\n      <th>weekday</th>\n      <th>workingday</th>\n      <th>weathersit</th>\n      <th>temp</th>\n      <th>atemp</th>\n      <th>hum</th>\n      <th>windspeed</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>14312</th>\n      <td>14313</td>\n      <td>2012-08-24</td>\n      <td>3</td>\n      <td>1</td>\n      <td>8</td>\n      <td>13</td>\n      <td>0</td>\n      <td>5</td>\n      <td>1</td>\n      <td>2</td>\n      <td>0.80</td>\n      <td>0.7121</td>\n      <td>0.41</td>\n      <td>0.1045</td>\n    </tr>\n    <tr>\n      <th>15739</th>\n      <td>15740</td>\n      <td>2012-10-23</td>\n      <td>4</td>\n      <td>1</td>\n      <td>10</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0.46</td>\n      <td>0.4545</td>\n      <td>0.88</td>\n      <td>0.1642</td>\n    </tr>\n    <tr>\n      <th>12461</th>\n      <td>12462</td>\n      <td>2012-06-08</td>\n      <td>2</td>\n      <td>1</td>\n      <td>6</td>\n      <td>10</td>\n      <td>0</td>\n      <td>5</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0.66</td>\n      <td>0.6212</td>\n      <td>0.47</td>\n      <td>0.2537</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xtest.head(3)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -87,7 +179,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "acf3618c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -119,7 +215,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1bcf0397",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -151,7 +251,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d27577bc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -183,7 +287,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5bb4de93",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -215,7 +323,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9b6a3cc3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -249,7 +361,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "101dc9b8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": []
   },
